--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,18 +1,23 @@
 :root {
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  --link-color: #5eacc5;
 }
 
 html,
 body {
+  padding: 0 3rem;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 a {
-  color: inherit;
+  color: var(--link-color);
   text-decoration: none;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font);
+}
