--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,8 @@
 :root {
-  --border-radius: 12px;
+  --border-radius: 5px;
   --font: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   --link-color: #5eacc5;
+  --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 html,
@@ -9,6 +10,10 @@ body {
   padding: 0 3rem;
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+ul{
+  list-style: none;
 }
 
 a {
