--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     padding: 0.75rem 0;
     border-bottom: 1px solid rgb(230, 230, 230);
+    margin-bottom: 2rem;
 }
 .title{
     font-weight: 600;
