creado tabla de episodios basica

--- a/src/components/PodcastDetailsSection/EpisodesList/EpisodesList.module.css
+++ b/src/components/PodcastDetailsSection/EpisodesList/EpisodesList.module.css
@@ -9,3 +9,20 @@
     box-shadow: var(--box-shadow);
     padding: 0.5rem 1rem;
 }
+
+
+.tableEpisodes {
+    margin-top: 2rem;
+    width: 100%;
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+}
+
+.tableEpisodes>tr>th {
+    text-align: left;
+    padding: 0.5rem;
+}
+
+.thTitle {
+    width: 70%;
+}
