--- a/src/components/PodcastDetailsCard/PodcastDetailsCard.module.css
+++ b/src/components/PodcastDetailsCard/PodcastDetailsCard.module.css
@@ -10,7 +10,7 @@
     padding: 1.5rem 0;
 }
 
-.cardContainer>img {
+.image {
     width: 13rem;
     border-radius: var(--border-radius);
 }
@@ -21,10 +21,12 @@
     box-sizing: border-box;
 
 }
+
 .cardContainer>div>* {
     text-align: left;
     font-size: 16px;
 }
+
 /* titulos nombre y creador */
 .containerTitles {
     margin: 1.5rem 0;
@@ -33,8 +35,11 @@
     border-bottom: 1px solid rgba(213, 213, 213, 0.552);
     padding-left: 0.5rem;
 }
+.name>a{
+    color: black;
+}
 
-.artist{
+.artist {
     font-weight: 400;
     font-style: italic;
 }
